trying to fix image widths on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,9 @@ ul, ol, dl, figure, img,
  * Images
  */
 img {
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: 100%;
+  height: 100%;
   vertical-align: middle; }
 
 /**
